# sistemiOperativi

EsercizioCMAKE/: CMakeLists.txt
EsercizioCMAKE/executables/: CMakeLists.txt
EsercizioCMAKE/src/: CMakeLists.txt
avr/keyboard/: keyboard.c  keyboard.elf  keyboard.hex
esercizioCMAKE/: README.md
functionPointers/: input.in  main  main.c
lateBinding/: linked_list.c  main.c
linkedList/: linked_list_test  linked_list_test.c
